--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "homepage": "https://cmw-big.github.io/github-actions-demo",
   "devDependencies": {
-    "@types/node": "^18.8.2",
+    "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.24.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
